Fix curation mobile view

--- a/src/client/styles.scss
+++ b/src/client/styles.scss
@@ -338,7 +338,7 @@ canvas {
 
 .curation-art {
   max-height: 80vh;
-  max-width: 80vh;
+  max-width: 67vw;
   // width: 100%    !important;
   // height: auto   !important;
 }
